fixed icon alignment and pathfindered icons

--- a/css/main.css
+++ b/css/main.css
@@ -10,9 +10,42 @@ html {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   text-size-adjust: 100%;
-  font-family: "Overpass", sans-serif;
+  font-family: Overpass, sans-serif;
+  color: #fff;
 }
 
 *, *::before, *::after {
   box-sizing: inherit;
+}
+
+section {
+  background-image: linear-gradient(to top, #ff5e3a, #ff9500);
+}
+
+i {
+  color: #fff;
+}
+
+.btn {
+  color: #fff;
+  border-color: #fff;
+}
+
+.btn:hover {
+  background-color: #fff;
+  color: #ff5e3a;
+  border-color: #fff;
+}
+
+@media only screen and (min-width: 60em) {
+
+  li {
+    text-align: left;
+  }
+
+  .unit-middle {
+    border-left: 2px solid rgba(255, 255, 255, 0.5);
+    border-right: 2px solid rgba(255, 255, 255, 0.5);
+  }
+
 }
